# MediumScraper

./: .flake8  .gitignore  .gitlab-ci.yml  AWS deployment.ipynb  README.html  README.md  SEO_Articles_Scrapper.ipynb  export_requirements.sh  full_deploy.py  lambda_function.py  noxfile.py  production.config  pyproject.toml  requirements.txt
aws_deployment/: .gitignore  1_create_aws_bucket.sh  2_5_package.sh  2_build_layer.sh  3_deploy.sh  4_invoke.sh  5_cleanup.sh  auxiliar_ec2_template.yml  aws_configuration  aws_deployer.py  aws_lambda_manager.py  cloudformation_template.yml  deploy_auxiliar_ec2.sh  describe_stack_events.sh  describe_stack_events_auxiliar_ec2.sh  event.json  get_put_object_s3_policy.yml
src/: article.py  article_manager.py  article_scraper.py  article_searcher.py  article_storage.py  aws_lambda_manager.py  lambda_function.py  map_reduce.py  medium_scraper.py
src/article_searcher/: archive_searcher.py  article_searcher.py  relevance_searcher.py
tests/: test_article.py  test_article_manager.py  test_article_scrapper.py  test_article_searcher.py  test_article_storage.py  test_aws_lambda_manager.py  test_map_reduce.py  test_medium_scrapper.py
tests/article_searcher/: test_archive_searcher.py  test_article_searcher.py  test_relevance_searcher.py
tests/helpers/: archive_results_for_day.html  archive_results_for_day_missing_reading_time.html  example_article_1.html  example_article_1.json  example_search_result_1.html  seo_search_result_1.html  seo_search_result_2.html  seo_search_result_3.html  seo_search_result_4.html  (+1 more)
