[tool.poetry]
name = "SEOArticlesScrapper"
version = "0.1.0"
description = ""
authors = ["Rubén <rchulia@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
beautifulsoup4 = "^4.9.3"
boto3 = "^1.18.29"
python-dotenv = "^0.19.0"
"ruamel.yaml" = "^0.17.16"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
nox = "^2020.5.24"
safety = "^1.9.0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
black = "^19.10b0"
flake8-black = "^0.2.1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
mypy = "^0.790"
typeguard = "^2.10.0"
pytest-mock = "^3.3.1"
requests-mock = "^1.8.0"
importlib-metadata = "^4.0.1"
patool = "^1.12"
jupyterlab = "^3.1.8"
jupyter_nbextensions_configurator = "^0.4.1"
paramiko = "^2.7.2"
scp = "^0.13.6"
"ruamel.yaml" = "^0.17.16"
beautifulsoup4 = "^4.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/article_scraper.py", "src/lambda_function.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# pyproject.toml
